# desk_buddy

./: .gitignore  Cargo.toml  README.md  config.toml.example  readme.md  sdkconfig.defaults
.devcontainer/: devcontainer.json
db-link/: Cargo.toml  README.md
db-link/src/: commands.rs  lib.rs  mem_utils.rs  parser.rs
db-server/: Cargo.toml
db-server/src/: main.rs
db-ui/: Cargo.toml
db-ui-simulator/: Cargo.toml  config.toml  config.toml.example  readme.md
db-ui-simulator/src/: main.rs
db-ui/src/: lib.rs
db-ui/src/pages/: weather.rs
db-weather/: Cargo.toml
db-weather-openweather/: Cargo.toml
db-weather-openweather/src/: api.rs  lib.rs  types.rs
db-weather/src/: lib.rs
desk-display/: Cargo.toml  readme.md
desk-display-bare-metal/: Cargo.toml  readme.md
desk-display-bare-metal/src/: main.rs
desk-display/docs/: README.md
desk-display/src/: main.rs
desk-display/src/pages/: weather.rs
fifo/: Cargo.toml
fifo/src/: lib.rs
scripts/: flash.sh
src/: main.rs
src/openweather/: api.rs  types.rs
src/pages/: weather.rs
