[package]
name = "db-weather-openweather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db-weather = {path = "../db-weather/"}
anyhow = "1.0.81"
memchr = "2.7.2"
url = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
memmem = "0.1.1"
thiserror = "1.0.58"
chrono = "0.4.38"
