[package]
name = "desk-display"
version = "0.1.0"
authors = ["Preston Garrison III <preston.garrison3@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
db-weather-openweather = {path = "../db-weather-openweather/"}
db-weather = {path = "../db-weather/"}
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
anyhow = "1.0.81"
async-io = "2.3.2"
memchr = "2.7.2"
url = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
memmem = "0.1.1"
ssd1680 = {git = "https://github.com/PGIII/ssd1680", branch="embedded_hal_1_invert"}
embedded-graphics = "0.8.1"
thiserror = "1.0.58"
tinybmp = "0.5.0"
rust-embed = { version = "8.3.0", features = ["debug-embed"] }
toml = "0.8.12"
profont = "0.7.0"
chrono = "0.4.38"

[build-dependencies]
embuild = "0.31.3"
